# Tiangou-AI

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile.api  HONESTY.md  PRODUCT.md  README.md  Tech-pitch.md  docker-compose.hk-grid.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  database.py  diagnose_gridsfm_case.py  export_load_allocation.py  export_powermodels.py  export_topology_diagnostics.py  gridsfm_case_tools.py  gridsfm_solver.py  gridsfm_solver_config.py  ingest_consumer_proxies.py  load_proxies.py  main.py  overpass.py  regions.py  repository.py  run_gridsfm_export_experiments.py  topology.py  verify_gridsfm_handoff.py
app/assumptions/: __init__.py  contingencies.py  data_centers.py  demand_profiles.py  generators.py  (+5 more)
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
hk_grid_backend/: .dockerignore  Dockerfile  main.py  pinn_checkpoint.pt  plot_simulation.py  requirements.txt
hk_grid_frontend/: README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
pinn/: requirements.txt
tests/: test_api.py  test_assumptions.py  test_data_sources.py  test_dynamic.py  test_export_powermodels.py  test_frontend_source.py  test_gridsfm_case_tools.py  test_gridsfm_export_experiments.py  test_gridsfm_solver.py  test_load_proxies.py  test_overpass.py  test_repository.py  test_topology.py  test_verify_gridsfm_handoff.py
tiangou-ai-dashboard-v18/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  start-dashboard-5174.bat  start-dashboard.bat
(+116 files in other folders)
